    Previously existing cartridge type 17: "Atrax 128 KB cartridge" was based
    on a misconception - real Atrax cartridges have their address and data
    lines intermixed, so type 17 could not be used with actual ROM dumps. So,
    type 17 has been renamed to "Decoded Atrax 128 KB cartridge", and new type
    68 has been added, whcih now can be used for Atrax ROM chip dumps.

 Changes:
 --------
  * The Sound Settings option "Fragment size" has been renamed to less cryptic
    "Hardware buffer size".

 Fixes:
 ------
  * Fixed computation of gamma adjustment - now it is applied to each of the
    three RGB channels separately.
  * On systems that support synchronized sound: Fixed the emulator crashing
    when Dual POKEY was enabled while High Fidelity POKEY was turned off.
  * Improve screen update routines in the Dreamcast port. They don't use
    DIRTYRECT anymore but are faster than the old routines when the whole
    screen is dirty.


Version 3.1.0 (2014/04/12) - release cooked at Atariada.cz

  Highlight of this release: Raspberry Pi port by Andrey Dj

  Hidden easter egg: on-screen keyboard in SDL by Christian Groessler

  All the following work has been done by Tomasz Krasuski:

 General new features:
 ---------------------
  * More accurate emulation of PAL colours (based on analysis of oscillograms
    of real PAL GTIA output)

  * Improved PAL blending, working on all grayscale pixels and is accurate now
    (can be enabled/disabled in "TV effect" display settings)

  * common sound layer implemented (SDL, JavaNVM, OSS, DOS) with synchro sound.

  * synchronized sound is now supported by both POKEY sound engines.

  * turbo mode (F12) is considerably faster

  * Added cartridge mapping used by "Turbo Hit"/"Atari Blizzard Hit".
  * Added MegaMax 2 MB cartridge mapping.
  * Added read-only support for the 4 MB Flash MegaCart mapping.
  * Added minimal support for The!Cart.

 General Fixes:
 --------------