@@ -255,7 +255,9 @@ static jint JNICALL NativeRunAtariProgram(JNIEnv *env, jobject this,
 		CARTRIDGE_THECART_32M_DESC,
 		CARTRIDGE_THECART_64M_DESC,
 		CARTRIDGE_XEGS_8F_64_DESC,
-		CARTRIDGE_ATRAX_128_DESC
+		CARTRIDGE_ATRAX_128_DESC,
+		CARTRIDGE_ADAWLIAH_32_DESC,
+		CARTRIDGE_ADAWLIAH_64_DESC
 	};
 
 	const jbyte *img_utf = NULL;
