@@ -255,7 +255,7 @@ Turn on Atari BASIC ROM
 .BI \-cart\  filename
 Insert cartridge (CART or raw format)
 .TP
-.BR "\-cart\-type 0" .. 68
+.BR "\-cart\-type 0" .. 70
 Select type of the cartridge inserted with the \fB\-cart\fR option.
 When inserting a raw ROM image its type cannot be detected automaticcaly,
 and must be provided with this option.
@@ -465,8 +465,14 @@ The!Cart 64 MB cartridge
 .B 67
 XEGS 64 KB cartridge (banks 8-15)
 .TP
-.B 17
+.B 68
 Atrax 128 KB cartridge
+.TP
+.B 69
+aDawliah 32 KB cartridge
+.TP
+.B 70
+aDawliah 64 KB cartridge
 .PD
 .RE
 If this option is not given, the user will be asked to choose the cartridge
@@ -477,7 +483,7 @@ Insert piggyback cartridge (CART or raw format).
 This works only if the first cartridge is a pass-through (currently only
 SpartaDOS X 64KB and 128KB types).
 .TP
-.BR "\-cart2\-type 0" .. 68
+.BR "\-cart2\-type 0" .. 70
 Select type of the cartridge inserted with the \fB-cart2\fR option.
 When inserting a raw ROM image its type cannot be detected automatically,
 and must be provided with this option.
